--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # mastermapr
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/acteng/mastermapr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/acteng/mastermapr/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of mastermapr is to make it easy to get your OS data imported into open source software for reproducible data science and analysis (#rspatial).
